Ensure that the detail view looks good on wide screens as well
Before it took the maximum width which had the effect that the image was
stretched as well.

--- a/web/static/css/application.sass
+++ b/web/static/css/application.sass
@@ -428,6 +428,9 @@ body
     flex-direction: row
     flex-wrap: wrap
     justify-content: flex-start
+  .detail-view
+    .tile
+      max-width: $sm-breakpoint
   .preview
     height: 400px
     width: 300px
